deployment/photoprism/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism
  namespace: home
spec:
  selector:
    matchLabels:
      app: photoprism
  serviceName: photoprism
  replicas: 1
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      containers:
      - name: photoprism
        image: photoprism/photoprism:220302-bullseye
        ports:
        - containerPort: 2342
          name: http
        volumeMounts:
        - mountPath: /assets/photos/originals
          name: originals 
        - mountPath: /assets/cache
          name: photoprism
          subPath: cache
        - mountPath: /assets/photos/import
          name: photoprism
          subPath: import
        - mountPath: /assets/photos/export
          name: photoprism
          subPath: export
        readinessProbe:
          httpGet:
            path: /api/v1/status
            port: http
      volumes:
      - name: originals
        nfs:
          path: /volume1/homes/michael/Photos
          readOnly: true
          server: syn.michaelgoldstein.co
      - name: photoprism
        nfs:
          path: /volume1/pvc/photoprism
          server: syn.michaelgoldstein.co
